# argus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  EVALUATION.md  INTERVIEW_NOTES.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: alert_rules.yaml  models.yaml  policy.yaml  prices.yaml
docker/: demoworld.Dockerfile  platform.Dockerfile  ui.Dockerfile
evals/scenarios/: S1-v1.yaml  S1-v2.yaml  S1-v3.yaml  S2-v1.yaml  S2-v2.yaml  S2-v3.yaml  S3-v1.yaml  S3-v2.yaml  S3-v3.yaml  S4-v1.yaml  S4-v2.yaml  S4-v3.yaml  S5-v1.yaml  S5-v2.yaml  S5-v3.yaml
plan/: 00-README.md  01-product-spec.md  02-architecture.md  03-data-model.md  04-agents-graph.md  05-conventions.md  06-verification-protocol.md  07-evaluation-plan.md  08-risks-gotchas.md  PROGRESS.md
plan/milestones/: M00-scaffold.md  M01-demo-world.md  M02-platform-core.md  M03-llm-layer.md  M04-tools.md  M05-graph-v1.md  M06-hitl.md  M07-memory.md  M08-parallel-resilience.md  M09-observability.md  M10-ui.md  M11-evals.md  M12-demo-docs.md
src/argus/: __init__.py  demo.py  errors.py  settings.py
src/argus/agents/: __init__.py  prompts.py  reviewer.py  schemas.py  specialists.py  supervisor.py
src/argus/api/: __init__.py  app.py  schemas.py
src/argus/db/: __init__.py  models.py  session.py
src/argus/evals/: __init__.py  grade.py  report.py  run.py  scenarios.py
src/argus/graph/: __init__.py  build.py  deps.py  fanout.py  runtime.py  state.py  support.py  verify.py
src/argus/llm/: __init__.py  config.py  costs.py  fake.py  logging.py  parsing.py  providers.py  ratelimit.py  recorder.py  router.py  smoke.py
src/argus/memory/: __init__.py  consolidate.py  embedder.py  fingerprint.py  pgvector_store.py  recall.py  scoring.py  vectorstore.py  writer.py
src/argus/obs/: __init__.py  otel.py  pg_exporter.py  spans.py
src/demoworld/: __init__.py  alertwatch.py  inject.py  loadgen.py  poller.py
tests/: conftest.py
tests/fixtures/: alert_s1.json
tests/graph/: conftest.py  test_evals_runner.py  test_graph_flows.py  test_resilience.py
tests/integration/: test_dashboard.py  test_hitl.py  test_llm_layer.py  test_memory.py  test_platform.py  test_scenarios.py  test_tools_world.py
tests/unit/: test_alert_payload.py  test_alertwatch.py  test_budget_guard.py  test_consolidate.py  test_demo.py  test_deploys.py  test_eval_selection.py  test_fanout.py  test_grading.py  test_hotconfig.py  test_inject.py  test_jsonlog.py  test_llm_config.py  test_llm_costs.py  test_llm_fake.py  test_llm_fallback.py  test_llm_parsing.py  test_llm_recorder.py  test_memory_scoring.py  test_modify_regate.py  test_paymentsvc.py  test_poller.py  test_recovery_rederivation.py  test_report.py  test_risk_gate.py  test_settings.py  test_span_attrs.py  test_state_machine.py  test_stats.py  test_tool_registry.py  test_tools_worldstate.py
ui/: .eslintrc.cjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  main.tsx  queries.ts
(+71 files in other folders)
