[project]
name = "argus"
version = "0.1.0"
description = "Argus - AI on-call engineer: multi-agent incident response platform"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.5",
    "celery[redis]>=5.6.3",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-postgres>=3.1.0",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "pgvector>=0.4.2",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus", "src/demoworld"]

[tool.uv]
# Repo is on E: while uv's cache is on C:; cross-drive hardlinks fail, so copy instead.
link-mode = "copy"

# ---------------------------------------------------------------- tasks (05)

[tool.poe.tasks]
_fmt = "ruff format ."
_fix = "ruff check --fix ."
fmt = ["_fmt", "_fix"]
_lint_fmt = "ruff format --check ."
_lint_check = "ruff check ."
lint = ["_lint_fmt", "_lint_check"]
types = "mypy src"
test = "pytest -m unit -q"
verify = ["lint", "types", "test"]
test-graph = "pytest -m graph -q"
test-integration = 'docker compose run --rm tester pytest -q -m "integration or world"'
verify-all = ["verify", "test-graph", "test-integration"]
up = "docker compose --profile platform --profile world up -d --build"
down = "docker compose down"

# ---------------------------------------------------------------- lint / types

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "argus.*"
disallow_untyped_defs = true

# ---------------------------------------------------------------- pytest (05)

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "unit: pure logic, no network or containers (host)",
    "graph: full graph with FakeLLM + fixtures; needs platform postgres only (host)",
    "integration: against real compose services (tester container)",
    "world: integration subset driving the demo world (tester container)",
    "e2e: world + platform together (tester container)",
    "live_llm: hits real LLM APIs; run explicitly, never in aggregates",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "poethepoet>=0.47.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]
